# fastapi-tdd-docker

./: README.md  docker-compose.yml
project/: Dockerfile  Dockerfile.prod  pyproject.toml
project/.github/workflows/: main.yml
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/app/models/: tortoise.py
project/tests/: conftest.py  test_ping.py  test_summaries.py
