[tool.poetry]
name = "fastapi-tdd"
version = "1.0"
description = ""
authors = ["mubashir4160 <mubashir.ali@darvis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.94.1"
uvicorn = "0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
