[tool.poetry]
name = "fastapi-tdd"
version = "1.0"
description = ""
authors = ["mubashir4160 <mubashir.ali@darvis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.94.1"
uvicorn = "0.21.1"
asyncpg = "0.27.0"
tortoise-orm = "0.19.3"
aerich = "0.7.1"
pytest = "7.2.2"
httpx = "0.23.3"
gunicorn = "20.1.0"
pytest-cov = "4.0.0"
black = "23.1.0"
isort = "5.12.0"


[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
